--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "prettier --check \"src/**/*.ts\""
   },
   "dependencies": {
+    "@apollo-elements/lit-apollo": "^3.1.3",
     "lit-element": "^2.3.1",
     "lit-html": "^1.2.1"
   },
